feat: implement unit testing, improvise UI and flow, add expense record feature, fix dashboards